# RINS

./: requirements.txt
.github/: CODEOWNERS
3dringdataset/: aaa.py  dataset.yaml  imagegen.py
3dringdataset/images/val/: ring.cache
3dringdataset/labels/: train.cache  val.cache
3dringdataset/labels/train/: nesto.py
CUB_200_2011/CUB_200_2011/: toyolopython.py
LAST YEAR TASK/dis_tutorial7/: CMakeLists.txt
install/: local_setup.sh  setup.sh
log/: latest_build
ringsdata/: README.dataset.txt  README.roboflow.txt  data.yaml
ringsdata/train/: labels.cache
ringsdata/valid/: labels.cache
src/: .pgm  .yaml
src/dis_tutorial1/: CMakeLists.txt  homework1_answers.txt
src/dis_tutorial2/: CMakeLists.txt  package.xml  setup.py
src/dis_tutorial3/: CMakeLists.txt  scripts7face_positions.json
src/hwpub/: CMakeLists.txt
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/oddaja/: robot_commander.py
src/task/: CMakeLists.txt  package.xml
src/task/bash_scripts/: Detect.sh  commander.sh  launch.sh  run_rings.sh
src/task/launch/: control.py  dis_sim.launch.py  ignition.launch.py  localization.launch.py  nav2.launch.py  robot_description.launch.py  sim_turtlebot_nav.launch.py  sim_turtlebot_slam.launch.py  slam.launch.py  turtlebot4_spawn.launch.py  turtlebot4_spawn_nav.launch.py
src/task/maps/: logged_poses.json
src/task/scripts/: FINALONERINGS.py  FINALONESPEECH.py  autonomous_nav.py  detect_faces.py  detect_rings.py  padim_utils.py  pose_logger.py  robot_commander.py  robot_mover.py  temp.py
(+12222 files in other folders)
